# DEEP-AI

./: AGENT.md  AGENTS.MD  CLAUDE.md  FEATURE-SPEC.MD  How-To.md  PLAN-HANDOFF.md  QA_STANDARDS.md  README.md  README_PYTHON_VERSION.md  REFACTORING_SUMMARY.md  T1  T2  T3  THREAD_MANAGEMENT_ISSUES.md  UPSTREAM_SYNC_ANALYSIS.md  WARP.md  pyproject.toml  test  test-handoff-workflow.sh
.github/: dependabot.yml
.windsurf/workflows/: deepexecute.md
examples/research/: research_agent.py
libs/: CLAUDE.md
libs/deepagents/: CLAUDE.md  graph.py  pyproject.toml
libs/deepagents-cli/: AGENTS.md  BANNER_EXPERIMENTS.md  CEMENT_MIGRATION.md  CEMENT_SHOWCASE.md  CLAUDE.md  CLAUDE_UPDATES.md  HANDOFF_MIDDLEWARE_IMPACT_ANALYSIS.md  HANDOFF_SUMMARIZATION_MIDDLEWARE_DESIGN.md  Makefile  QUESTIONARY_MIGRATION.md  README.md  STYLEGUIDE.md  TUI_IMPROVEMENTS.md  dev.sh  langgraph.json  pyproject.toml  start-dev-server.sh  start-dev.sh  start-tmux.sh  test_rich_prompts.py
libs/deepagents-cli/deepagents_cli/: README.md  __init__.py  __main__.py  _bootstrap.py  _internal.py  agent.py  agent_memory.py  backends_compat.py  cement_interactive.py  cement_main.py  cement_menu_system.py  commands.py  config.py  execution.py  file_ops.py  graph.py  handoff_approval.py  handoff_persistence.py  handoff_summarization.py  handoff_ui.py  input.py  main.py  middleware_stack.py  prompt_safety.py  prompt_theme.py  resumable_shell_async.py  rich_ui.py  server_client.py  thread_display.py  thread_manager.py  thread_store.py  token_utils.py  tools.py  ui.py  ui_components.py  ui_constants.py
libs/deepagents-cli/deepagents_cli/integrations/: daytona.py  modal.py  runloop.py  sandbox_factory.py
libs/deepagents-cli/deepagents_cli/menu_system/: __init__.py  core.py  handlers.py  menus.py  styles.py
libs/deepagents-cli/docs/: THREAD_MANAGEMENT.md  rich-prompt-system-design.md  thread-management-proposal.md  thread-ui-design.md  ui-architecture-and-guardrails.md
libs/deepagents-cli/tests/: test_backward_compatibility.py  test_bootstrap.py  test_commands_handoff.py  test_commands_integration.py  test_execution_handoff.py  test_handoff_persistence.py  test_handoff_workflow_integration.py  test_prompt_safety.py  test_rich_prompt_async.py  test_thread_manager.py  test_thread_picker.py
libs/deepagents-cli/tests/unit_tests/: test_commands.py  test_input.py  test_ui.py
libs/deepagents-cli/tests/unit_tests/skills/: test_skills_commands.py
libs/deepagents/deepagents/: __init__.py  graph.py
libs/deepagents/deepagents/middleware/: __init__.py  filesystem_permission.py  handoff_approval.py  handoff_cleanup.py  handoff_summarization.py  handoff_tool.py  prompt_cache.py  resumable_shell.py
libs/deepagents/middleware/: __init__.py  filesystem_permission.py  handoff_approval.py  handoff_cleanup.py  handoff_summarization.py  handoff_tool.py  prompt_cache.py
libs/deepagents/tests/unit_tests/: test_handoff_cleanup.py  test_handoff_summarization.py
